removed top:35px to top: 0, this fixes the issue of the image-overlay not covering the full size hero image

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -61,7 +61,7 @@
 .image-overlay {
   content: "";
   position: absolute;
-  top: 35px;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
